fix(ui): set (vertical AND) horizontal gap of pyramid to same spacing

--- a/src/web/scu-webservice/src/app/subcomponents/pyramide-divs/pyramide-divs.component.scss
+++ b/src/web/scu-webservice/src/app/subcomponents/pyramide-divs/pyramide-divs.component.scss
@@ -9,7 +9,6 @@
 .level {
   position: absolute;
   display: flex;
-  gap: 10px;
 }
 .member {
   border: 1px solid #000;
